--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container-fluid h-100" id="wrapper">
   <div class="row" style="height: 100%;">
-    <div class="col-2 p-0 bg-light h-100" style="height: 100%;">
+    <div class="col-2 p-0 bg-light h-100 border-right" style="height: 100%;">
       <!-- Sidebar -->
       <app-sidebar></app-sidebar>
       <!-- /#sidebar-wrapper -->
