--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -102,7 +102,7 @@
 
           <div class="col-6">
             <small [ngClass]="{'text-danger':form.controls.password.errors}"
-              for="">{{form.controls.password.errors ? "*Min length 6 characters" : "Password"}}</small>
+              for="">{{form.controls.password.errors ? '*Min length 6 characters' : 'Password'}}</small>
             <div class="input-group mb-2">
               <input formControlName="password" class="form-control py-2 rounded-0 border" placeholder="Password"
                 type="Password" [ngClass]="{'is-invalid':form.controls.password.errors}">
@@ -124,9 +124,10 @@
         <div class="row">
 
           <div class="col-6">
-            <small for="">{{form.controls.phone.errors ? 'Phone*' : 'Phone'}}</small>
+            <small [ngClass]="{'text-danger':form.controls.phone.errors}"
+              for="">{{form.controls.phone.errors ? 'Required' : 'Phone'}}</small>
             <div class="input-group mb-3">
-              <input [ngClass]="{'is-invalid': form.controls.phone.errors}" formControlName="phone" class="form-control py-2 rounded-0 border" placeholder="Phone"
+              <input formControlName="phone" class="form-control py-2 rounded-0 border" placeholder="Phone"
                 type="number">
             </div>
           </div>
